<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="image_cancel_text">取消</string>
    <string name="image_complete_text">完成</string>

    <string name="image_doodle">涂鸦</string>
    <string name="image_text">文字</string>
    <string name="image_mosaic">马赛克</string>
    <string name="image_clip">裁剪</string>
    <string name="image_reset">还原</string>
    <string name="image_done">完成</string>
    <string name="image_cancel">取消</string>
    <string name="image_rotate">旋转</string>

    <string name="image_undo">撤销</string>
    <string name="image_all_photo">所有照片</string>
    <string name="image_original">原图</string>
    <string name="image_preview">预览</string>
</resources>